trying with overflow to see if it stops content from jumping

--- a/index.css
+++ b/index.css
@@ -122,6 +122,7 @@ a:hover {
 
 .home-tab-image{
   opacity: 0;
+  overflow: visible;
 }
 
 .animated{
